      popup window is not shown instead. Replace geda_widget_hide_all with
      gtk_widget_hide in geda_combo_box_popdown; if the popup window is
      hidden then the entire menu is hidden. Remove calling geda_combo_box_
      popup in geda_combo_box_list_button_pressed because setting the toggle
      button active will trigger an event (thats calls geda_combo_box_popup).

2020-04-28 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_combobox.c: Revise geda_combo_box_destroy to only
      call geda_combo_box_popdown when popup_in_progress is set. Revise
      geda_combo_box_real_popup to not call gtk_toggle_button_set_active
      as this result in nested signal emission and geda_combo_box_popup
      and consequently geda_combo_box_real_popup being called twice. Revise
      geda_combo_box_popdown; to not set the pointer to priv until after
      the combo_box is validated, and only call gtk_toggle_button_get_active
      if priv->button is active, add private member toggled_id and block
      geda_combo_box_button_toggled to suppress nested emissions of the
      "toggled" signal and subsequent calls to geda_combo_box_popdown.

2020-04-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Replace gtk_widget_hide_all with
      gtk_widget_hide in geda_menu_item_hide_all. Replace switch case
      with if/else. Utilize macro:

          * geda_get_widget_window
          * geda_set_widget_style
          * geda_get_widget_parent

2020-04-24 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_accel_label.c: Revise geda_accel_label_draw to not
      call gtk_widget_set_allocation since the allocation being manipulated
      is by reference and utilize local reference to allocation. Replace
      switch case with if/else.

2020-04-23 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_accel_label.c: Eliminate conditional GSEAL_ENABLE
      directive; use geda_get_misc_xpad instead.
